# AltPkgParser

./: Cargo.toml  README.md
src/: api_struct.rs  data.rs  fetch.rs  lib.rs  main.rs  packages_handler.rs
