[package]
name = "altpkgparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

rpm = "0.15.1"

log = ">= 0.4.14"
stderrlog = ">= 0.5.1"
structopt = ">= 0.3.26"
anyhow = "1.0.86"
